refactor. get rid of public fields in edge, graph, labele, labelv. extract enum LineType